added bearer auth
